v2.9.2 support build of python support outside of source tree (Michał Górny)
v2.9.1 added updated config.sub/config.guess in autogen
v2.9.0 add new FascistCheckUser function from Enrico Scholz, bumped minor version for library
v2.8.22 error return instead of exit if dictionary can't be opened (Nalin Dahyabhai)
v2.8.21 export prototype for FascistLook (Nalin Dahyabhai)
v2.8.20 include python/test_cracklib.py in release tarball (Jan Dittberner)
        rename python/_cracklibmodule.c to python/_cracklib.c to support Python 3.3 (Jan Dittberner)
		patch from Ivosh (iraisr) for uninitialized buffer issue with small dictionaries.
v2.8.19 drop autogenerated files from SVN (Mike Frysinger)
        add words from "The Top 500 Worst Passwords of All Time" <http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time> to dicts/cracklib-small (patch by Fabian Greffrath)
        include sys/stat.h in python/_cracklibmodule.c (Mike Frysinger)
        add test suite for Python binding (Jan Dittberner)
        port Python binding to Python3 (Jan Dittberner)
v2.8.18 also include stdlib.h in stringlib.c (Mike Frysinger)
        make sure python lib builds against build dir instead of system installed libs (Arfrever Frehtes Taifersar Arahesis)
v2.8.17 fixed compilation on interix systems
        updated Hindi translation (Rajesh Ranjan)
        fixed NLS issue in cracklib-check
        add Ukrainian translation (Yuri Chornoivan)
        fix segmentation fault in Python extension (Peter Palfrader)
        add -Wall to AM_CFLAGS to discover possible programming errors (Jan Dittberner)
        updated Wei Liu (zh_CN) translation (Leah Liu)
		fixed NLS support in python module compilation (Mike Frysinger)
v2.8.16 update licensing information in Python extension (Jan Dittberner)
        make translations work in Python extension (Jan Dittberner)
        fix Python extension compilation warning (Jan Dittberner)
        add a long description to Python extension (Jan Dittberner)