@@ -1,11 +1,12 @@
 v2.9.2 support build of python support outside of source tree (Michał Górny)
+       fix bug in Python string distance calculation (Pascal Muetschard)
 v2.9.1 added updated config.sub/config.guess in autogen
 v2.9.0 add new FascistCheckUser function from Enrico Scholz, bumped minor version for library
 v2.8.22 error return instead of exit if dictionary can't be opened (Nalin Dahyabhai)
 v2.8.21 export prototype for FascistLook (Nalin Dahyabhai)
 v2.8.20 include python/test_cracklib.py in release tarball (Jan Dittberner)
         rename python/_cracklibmodule.c to python/_cracklib.c to support Python 3.3 (Jan Dittberner)
-		patch from Ivosh (iraisr) for uninitialized buffer issue with small dictionaries.
+        patch from Ivosh (iraisr) for uninitialized buffer issue with small dictionaries.
 v2.8.19 drop autogenerated files from SVN (Mike Frysinger)
         add words from "The Top 500 Worst Passwords of All Time" <http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time> to dicts/cracklib-small (patch by Fabian Greffrath)
         include sys/stat.h in python/_cracklibmodule.c (Mike Frysinger)
@@ -20,7 +21,7 @@ v2.8.17 fixed compilation on interix systems
         fix segmentation fault in Python extension (Peter Palfrader)
         add -Wall to AM_CFLAGS to discover possible programming errors (Jan Dittberner)
         updated Wei Liu (zh_CN) translation (Leah Liu)
-		fixed NLS support in python module compilation (Mike Frysinger)
+        fixed NLS support in python module compilation (Mike Frysinger)
 v2.8.16 update licensing information in Python extension (Jan Dittberner)
         make translations work in Python extension (Jan Dittberner)
         fix Python extension compilation warning (Jan Dittberner)
